--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.59.19",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "card": "^2.5.4",
     "class-variance-authority": "^0.7.0",
@@ -31,6 +32,7 @@
     "react-paginate": "^8.2.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.27.0",
+    "recharts": "^2.13.3",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
